# FFmpeg_Demo

./: .gitignore  CMakeLists.txt  main.cpp
chapter10/: CMakeLists.txt
chapter11/: video_encoder.cpp
chapter14/: video_filter.cpp
ffmpeg_dep/mac/include/libavcodec/: avcodec.h
ffmpeg_dep/mac/include/libavutil/: ffversion.h
ffmpeg_dep/mac/lib/: libavdevice.58.10.100.dylib  libavdevice.59.4.100.dylib  libavformat.58.dylib  libavformat.59.dylib  libavutil.57.17.100.dylib  libpostproc.55.dylib  libpostproc.56.dylib  libswresample.4.3.100.dylib  libswscale.6.4.100.dylib  libswscale.dylib
ffmpeg_dep/mac/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeg_dep/mac/share/man/man1/: ffmpeg-all.1  ffmpeg-bitstream-filters.1  ffmpeg-codecs.1  ffmpeg-devices.1  ffmpeg-filters.1  ffmpeg-formats.1  ffmpeg-protocols.1  ffmpeg-utils.1  ffmpeg.1  ffplay-all.1  ffplay.1  ffprobe-all.1  ffprobe.1
ffmpeg_dep/windows/include/libavformat/: avformat.h
ffmpeg_lib/lib/: libavutil.dylib  libswresample.dylib
ffmpeg_lib/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libpostproc.pc  libswscale.pc
ffmpeg_lib/share/man/man1/: ffplay.1
src/: audio_filter_core.cpp  audio_resampler_core.cpp  io_data.cpp  muxer_core.cpp  video_decoder_core.cpp  video_encoder_core.cpp  video_filter_core.cpp  video_swscale_core.cpp
tools/: CMakeLists.txt  cmdutils.c  config.h  ffplay.c
